@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd March 2, 2014
+.Dd September 11, 2014
 .Dt ATF-C++-API 3
 .Os
 .Sh NAME
@@ -68,13 +68,13 @@
 .Sh SYNOPSIS
 .In atf-c++.hpp
 .Fn ATF_ADD_TEST_CASE "tcs" "name"
-.Fn ATF_CHECK_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_CHECK_ERRNO "expected_errno" "bool_expression"
 .Fn ATF_FAIL "reason"
 .Fn ATF_INIT_TEST_CASES "tcs"
 .Fn ATF_PASS
 .Fn ATF_REQUIRE "expression"
-.Fn ATF_REQUIRE_EQ "expression_1" "expression_2"
-.Fn ATF_REQUIRE_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_REQUIRE_EQ "expected_expression" "actual_expression"
+.Fn ATF_REQUIRE_ERRNO "expected_errno" "bool_expression"
 .Fn ATF_REQUIRE_IN "element" "collection"
 .Fn ATF_REQUIRE_MATCH "regexp" "string_expression"
 .Fn ATF_REQUIRE_NOT_IN "element" "collection"
@@ -388,6 +388,8 @@ takes an expression and raises a failure if it evaluates to false.
 .Fn ATF_REQUIRE_EQ
 takes two expressions and raises a failure if the two do not evaluate to
 the same exact value.
+The common style is to put the expected value in the first parameter and the
+actual value in the second parameter.
 .Pp
 .Fn ATF_REQUIRE_IN
 takes an element and a collection and validates that the element is present in
@@ -588,13 +590,13 @@ ATF_TEST_CASE_HEAD(addition)
 }
 ATF_TEST_CASE_BODY(addition)
 {
-    ATF_REQUIRE_EQ(0 + 0, 0);
-    ATF_REQUIRE_EQ(0 + 1, 1);
-    ATF_REQUIRE_EQ(1 + 0, 1);
+    ATF_REQUIRE_EQ(0, 0 + 0);
+    ATF_REQUIRE_EQ(1, 0 + 1);
+    ATF_REQUIRE_EQ(1, 1 + 0);
 
-    ATF_REQUIRE_EQ(1 + 1, 2);
+    ATF_REQUIRE_EQ(2, 1 + 1);
 
-    ATF_REQUIRE_EQ(100 + 200, 300);
+    ATF_REQUIRE_EQ(300, 100 + 200);
 }
 
 ATF_TEST_CASE(open_failure);
