@@ -99,21 +99,22 @@
 
 #define ATF_PASS() atf::tests::tc::pass()
 
-#define ATF_REQUIRE(x) \
+#define ATF_REQUIRE(expression) \
     do { \
-        if (!(x)) { \
+        if (!(expression)) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " << #x << " not met"; \
+            atfu_ss << "Line " << __LINE__ << ": " << #expression << " not met"; \
             atf::tests::tc::fail(atfu_ss.str()); \
         } \
     } while (false)
 
-#define ATF_REQUIRE_EQ(x, y) \
+#define ATF_REQUIRE_EQ(expected, actual) \
     do { \
-        if ((x) != (y)) { \
+        if ((expected) != (actual)) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " << #x << " != " << #y \
-                     << " (" << (x) << " != " << (y) << ")"; \
+            atfu_ss << "Line " << __LINE__ << ": " \
+                    << #expected << " != " << #actual \
+                    << " (" << (expected) << " != " << (actual) << ")"; \
             atf::tests::tc::fail(atfu_ss.str()); \
         } \
     } while (false)
@@ -134,64 +135,69 @@
         } \
     } while (false)
 
-#define ATF_REQUIRE_THROW(e, x) \
+#define ATF_REQUIRE_THROW(expected_exception, statement) \
     do { \
         try { \
-            x; \
+            statement; \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " did not throw " \
-                        #e " as expected"; \
+            atfu_ss << "Line " << __LINE__ \
+                    << ": " #statement " did not throw " #expected_exception \
+                       " as expected"; \
             atf::tests::tc::fail(atfu_ss.str()); \
-        } catch (const e&) { \
+        } catch (const expected_exception&) { \
         } catch (const std::exception& atfu_e) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " threw an " \
-                        "unexpected error (not " #e "): " << atfu_e.what(); \
+            atfu_ss << "Line " << __LINE__ << ": " #statement " threw an " \
+                       "unexpected error (not " #expected_exception "): " \
+                    << atfu_e.what(); \
             atf::tests::tc::fail(atfu_ss.str()); \
         } catch (...) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " threw an " \
-                        "unexpected error (not " #e ")"; \
+            atfu_ss << "Line " << __LINE__ << ": " #statement " threw an " \
+                       "unexpected error (not " #expected_exception ")"; \
             atf::tests::tc::fail(atfu_ss.str()); \
         } \
     } while (false)
 
-#define ATF_REQUIRE_THROW_RE(type, regexp, x) \
+#define ATF_REQUIRE_THROW_RE(expected_exception, regexp, statement) \
     do { \
         try { \
-            x; \
+            statement; \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " did not throw " \
-                        #type " as expected"; \
+            atfu_ss << "Line " << __LINE__ \
+                    << ": " #statement " did not throw " #expected_exception \
+                       " as expected"; \
             atf::tests::tc::fail(atfu_ss.str()); \
-        } catch (const type& e) { \
+        } catch (const expected_exception& e) { \
             if (!atf::tests::detail::match(regexp, e.what())) { \
                 std::ostringstream atfu_ss; \
-                atfu_ss << "Line " << __LINE__ << ": " #x " threw " #type "(" \
+                atfu_ss << "Line " << __LINE__ \
+                        << ": " #statement " threw " #expected_exception "(" \
                         << e.what() << "), but does not match '" << regexp \
                         << "'"; \
                 atf::tests::tc::fail(atfu_ss.str()); \
             } \
         } catch (const std::exception& atfu_e) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " threw an " \
-                        "unexpected error (not " #type "): " << atfu_e.what(); \
+            atfu_ss << "Line " << __LINE__ << ": " #statement " threw an " \
+                        "unexpected error (not " #expected_exception "): " \
+                    << atfu_e.what(); \
             atf::tests::tc::fail(atfu_ss.str()); \
         } catch (...) { \
             std::ostringstream atfu_ss; \
-            atfu_ss << "Line " << __LINE__ << ": " #x " threw an " \
-                        "unexpected error (not " #type ")"; \
+            atfu_ss << "Line " << __LINE__ << ": " #statement " threw an " \
+                        "unexpected error (not " #expected_exception ")"; \
             atf::tests::tc::fail(atfu_ss.str()); \
         } \
     } while (false)
 
-#define ATF_CHECK_ERRNO(exp_errno, bool_expr) \
-    atf::tests::tc::check_errno(__FILE__, __LINE__, exp_errno, #bool_expr, \
-                                bool_expr)
+#define ATF_CHECK_ERRNO(expected_errno, bool_expr) \
+    atf::tests::tc::check_errno(__FILE__, __LINE__, expected_errno, \
+                                #bool_expr, bool_expr)
 
-#define ATF_REQUIRE_ERRNO(exp_errno, bool_expr) \
-    atf::tests::tc::require_errno(__FILE__, __LINE__, exp_errno, #bool_expr, \
-                                  bool_expr)
+#define ATF_REQUIRE_ERRNO(expected_errno, bool_expr) \
+    atf::tests::tc::require_errno(__FILE__, __LINE__, expected_errno, \
+                                  #bool_expr, bool_expr)
 
 #define ATF_INIT_TEST_CASES(tcs) \
     namespace atf { \
