@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd March 2, 2014
+.Dd September 11, 2014
 .Dt ATF-C-API 3
 .Os
 .Sh NAME
@@ -95,22 +95,22 @@
 .In atf-c.h
 .Fn ATF_CHECK "expression"
 .Fn ATF_CHECK_MSG "expression" "fail_msg_fmt" ...
-.Fn ATF_CHECK_EQ "expression_1" "expression_2"
-.Fn ATF_CHECK_EQ_MSG "expression_1" "expression_2" "fail_msg_fmt" ...
+.Fn ATF_CHECK_EQ "expected_expression" "actual_expression"
+.Fn ATF_CHECK_EQ_MSG "expected_expression" "actual_expression" "fail_msg_fmt" ...
 .Fn ATF_CHECK_MATCH "regexp" "string"
 .Fn ATF_CHECK_MATCH_MSG "regexp" "string" "fail_msg_fmt" ...
 .Fn ATF_CHECK_STREQ "string_1" "string_2"
 .Fn ATF_CHECK_STREQ_MSG "string_1" "string_2" "fail_msg_fmt" ...
-.Fn ATF_CHECK_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_CHECK_ERRNO "expected_errno" "bool_expression"
 .Fn ATF_REQUIRE "expression"
 .Fn ATF_REQUIRE_MSG "expression" "fail_msg_fmt" ...
-.Fn ATF_REQUIRE_EQ "expression_1" "expression_2"
-.Fn ATF_REQUIRE_EQ_MSG "expression_1" "expression_2" "fail_msg_fmt" ...
+.Fn ATF_REQUIRE_EQ "expected_expression" "actual_expression"
+.Fn ATF_REQUIRE_EQ_MSG "expected_expression" "actual_expression" "fail_msg_fmt" ...
 .Fn ATF_REQUIRE_MATCH "regexp" "string"
 .Fn ATF_REQUIRE_MATCH_MSG "regexp" "string" "fail_msg_fmt" ...
-.Fn ATF_REQUIRE_STREQ "string_1" "string_2"
-.Fn ATF_REQUIRE_STREQ_MSG "string_1" "string_2" "fail_msg_fmt" ...
-.Fn ATF_REQUIRE_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_REQUIRE_STREQ "expected_string" "actual_string"
+.Fn ATF_REQUIRE_STREQ_MSG "expected_string" "actual_string" "fail_msg_fmt" ...
+.Fn ATF_REQUIRE_ERRNO "expected_errno" "bool_expression"
 .Fn ATF_TC "name"
 .Fn ATF_TC_BODY "name" "tc"
 .Fn ATF_TC_BODY_NAME "name"
@@ -495,6 +495,8 @@ take an expression and fail if the expression evaluates to false.
 and
 .Fn ATF_REQUIRE_EQ_MSG
 take two expressions and fail if the two evaluated values are not equal.
+The common style is to put the expected value in the first parameter and the
+actual value in the second parameter.
 .Pp
 .Fn ATF_CHECK_MATCH ,
 .Fn ATF_CHECK_MATCH_MSG ,
@@ -512,6 +514,8 @@ the string.
 and
 .Fn ATF_REQUIRE_STREQ_MSG
 take two strings and fail if the two are not equal character by character.
+The common style is to put the expected string in the first parameter and the
+actual string in the second parameter.
 .Pp
 .Fn ATF_CHECK_ERRNO
 and
@@ -710,13 +714,13 @@ ATF_TC_HEAD(addition, tc)
 }
 ATF_TC_BODY(addition, tc)
 {
-    ATF_CHECK_EQ(0 + 0, 0);
-    ATF_CHECK_EQ(0 + 1, 1);
-    ATF_CHECK_EQ(1 + 0, 1);
+    ATF_CHECK_EQ(0, 0 + 0);
+    ATF_CHECK_EQ(1, 0 + 1);
+    ATF_CHECK_EQ(1, 1 + 0);
 
-    ATF_CHECK_EQ(1 + 1, 2);
+    ATF_CHECK_EQ(2, 1 + 1);
 
-    ATF_CHECK_EQ(100 + 200, 300);
+    ATF_CHECK_EQ(300, 100 + 200);
 }
 
 ATF_TC(string_formatting);
